--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ghasemkiani/steembottrackerapi",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A simple utility to get the list of bots from steembottracker",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/ghasemkiani/steembottrackerapi#readme",
   "dependencies": {
-    "@ghasemkiani/commonbase": "github:ghasemkiani/commonbase"
+    "@ghasemkiani/commonbase": "github:ghasemkiani/commonbase",
+    "@ghasemkiani/net-utils": "github:ghasemkiani/net-utils"
   },
   "devDependencies": {}
 }
